// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loader basic (css endpoint): errors 1`] = `Array []`;

exports[`loader basic (css endpoint): escape 1`] = `
"/* eslint-disable */

module.exports = function escape(url) {
  if (typeof url !== 'string') {
    return url;
  }

  // If url is already wrapped in quotes, remove them
  if (/^['\\"].*['\\"]$/.test(url)) {
    url = url.slice(1, -1);
  }

  // Should url be wrapped?
  // See https://drafts.csswg.org/css-values-3/#urls
  if (/[\\"'() \\\\t\\\\n]/.test(url)) {
    return '\\"' + url.replace(/\\"/g, '\\\\\\\\\\"').replace(/\\\\n/g, '\\\\\\\\n') + '\\"';
  }

  return url;
};
"
`;

exports[`loader basic (css endpoint): module (evaluated) 1`] = `
Array [
  Array [
    3,
    ".foo {
  color: red;
}
",
    "",
  ],
  Array [
    1,
    "@charset \\"UTF-8\\";

.class {
  color: red;
  background: url(/webpack/public/path/img.png);
}

.class-duplicate-url {
  background: url(/webpack/public/path/img.png);
}

.u-m\\\\+ {
  a: b c d;
}

.grid.\\\\-top {
  a: b c d;
}

.u-m\\\\00002b {
  a: b c d;
}

.class {
  content: '\\"\\\\\\\\f10c\\"';
}

.class {
  font-family: '微软雅黑';
}

.class {
  content: '\\\\e901';
}

.class {
  content: \\"\\\\F10C\\"
}

.class {
  content: \\"\\\\f10C\\"
}

.class {
  content: \\"\\\\F10C \\\\F10D\\"
}

:root {
  --foo: 1px;
  --bar: 2px;
}

:root {
  --title-align: center;
  --sr-only: {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
    clip-path: inset(50%);
    border: 0;
  };
}
",
    "",
  ],
]
`;

exports[`loader basic (css endpoint): module 1`] = `
"// CSS runtime
module.exports = exports = require(\\"../../src/runtime/api.js\\")(false);

// CSS imports
var escape = require(\\"../../src/runtime/escape.js\\");
var ___CSS_LOADER_URL___0___ = escape(require(\\"./url/img.png\\"));
exports.i(require(\\"-!../../src/index.js??ref--4!./imported.css\\"), \\"\\");

// CSS module
exports.push([module.id, \\"@charset \\\\\\"UTF-8\\\\\\";\\\\n\\\\n.class {\\\\n  color: red;\\\\n  background: url(\\" + ___CSS_LOADER_URL___0___ + \\");\\\\n}\\\\n\\\\n.class-duplicate-url {\\\\n  background: url(\\" + ___CSS_LOADER_URL___0___ + \\");\\\\n}\\\\n\\\\n.u-m\\\\\\\\+ {\\\\n  a: b c d;\\\\n}\\\\n\\\\n.grid.\\\\\\\\-top {\\\\n  a: b c d;\\\\n}\\\\n\\\\n.u-m\\\\\\\\00002b {\\\\n  a: b c d;\\\\n}\\\\n\\\\n.class {\\\\n  content: '\\\\\\"\\\\\\\\\\\\\\\\f10c\\\\\\"';\\\\n}\\\\n\\\\n.class {\\\\n  font-family: '微软雅黑';\\\\n}\\\\n\\\\n.class {\\\\n  content: '\\\\\\\\e901';\\\\n}\\\\n\\\\n.class {\\\\n  content: \\\\\\"\\\\\\\\F10C\\\\\\"\\\\n}\\\\n\\\\n.class {\\\\n  content: \\\\\\"\\\\\\\\f10C\\\\\\"\\\\n}\\\\n\\\\n.class {\\\\n  content: \\\\\\"\\\\\\\\F10C \\\\\\\\F10D\\\\\\"\\\\n}\\\\n\\\\n:root {\\\\n  --foo: 1px;\\\\n  --bar: 2px;\\\\n}\\\\n\\\\n:root {\\\\n  --title-align: center;\\\\n  --sr-only: {\\\\n    position: absolute;\\\\n    width: 1px;\\\\n    height: 1px;\\\\n    padding: 0;\\\\n    overflow: hidden;\\\\n    clip: rect(0,0,0,0);\\\\n    white-space: nowrap;\\\\n    clip-path: inset(50%);\\\\n    border: 0;\\\\n  };\\\\n}\\\\n\\", \\"\\"]);

"
`;

exports[`loader basic (css endpoint): runtime 1`] = `
"/* eslint-disable */

// CSS Loader (Runtime)
module.exports = function(useSourceMap) {
  var list = [];

  // Return the list of modules as css string
  list.toString = function toString() {
    return this.map(function(item) {
      var content = cssWithMappingToString(item, useSourceMap);

      if (item[2]) {
        return '@media ' + item[2] + '{' + content + '}';
      }

      return content;
    }).join('');
  };

  // Import a list of modules into the list
  list.i = function(modules, mediaQuery) {
    if (typeof modules === 'string') {
      modules = [[null, modules, '']];
    }

    const isImported = {};

    for (var i = 0; i < this.length; i++) {
      const id = this[i][0];

      if (typeof id === 'number') {
        isImported[id] = true;
      }
    }

    for (var i = 0; i < modules.length; i++) {
      const item = modules[i];

      // Skip already imported module.
      // This implementation is not 100% perfect for weird media query combinations
      // when a module is imported multiple times with different media queries.
      // I hope this will never occur (Hey this way we have smaller bundles).
      if (typeof item[0] !== 'number' || !isImported[item[0]]) {
        if (mediaQuery && !item[2]) {
          item[2] = mediaQuery;
        } else if (mediaQuery) {
          item[2] = '(' + item[2] + ') and (' + mediaQuery + ')';
        }

        list.push(item);
      }
    }
  };

  return list;
};

function cssWithMappingToString(item, useSourceMap) {
  var content = item[1] || '';
  var sourceMap = item[3];

  if (!sourceMap) {
    return content;
  }

  if (useSourceMap && typeof btoa === 'function') {
    var sourceMapping = toComment(sourceMap);
    var sourceURLs = sourceMap.sources.map(function(source) {
      return '/*# sourceURL=' + sourceMap.sourceRoot + source + ' */';
    });

    return [content]
      .concat(sourceURLs)
      .concat([sourceMapping])
      .join('\\\\n');
  }

  return [content].join('\\\\n');
}

// Adapted from convert-source-map (MIT)
function toComment(sourceMap) {
  var base64 = btoa(unescape(encodeURIComponent(JSON.stringify(sourceMap))));
  var data =
    'sourceMappingURL=data:application/json;charset=utf-8;base64,' + base64;

  return '/*# ' + data + ' */';
}
"
`;

exports[`loader basic (css endpoint): warnings 1`] = `Array []`;

exports[`loader basic: errors 1`] = `Array []`;

exports[`loader basic: escape 1`] = `
"/* eslint-disable */

module.exports = function escape(url) {
  if (typeof url !== 'string') {
    return url;
  }

  // If url is already wrapped in quotes, remove them
  if (/^['\\"].*['\\"]$/.test(url)) {
    url = url.slice(1, -1);
  }

  // Should url be wrapped?
  // See https://drafts.csswg.org/css-values-3/#urls
  if (/[\\"'() \\\\t\\\\n]/.test(url)) {
    return '\\"' + url.replace(/\\"/g, '\\\\\\\\\\"').replace(/\\\\n/g, '\\\\\\\\n') + '\\"';
  }

  return url;
};
"
`;

exports[`loader basic: module (evaluated) 1`] = `
Array [
  Array [
    3,
    ".foo {
  color: red;
}
",
    "",
  ],
  Array [
    1,
    "@charset \\"UTF-8\\";

.class {
  color: red;
  background: url(/webpack/public/path/img.png);
}

.class-duplicate-url {
  background: url(/webpack/public/path/img.png);
}

.u-m\\\\+ {
  a: b c d;
}

.grid.\\\\-top {
  a: b c d;
}

.u-m\\\\00002b {
  a: b c d;
}

.class {
  content: '\\"\\\\\\\\f10c\\"';
}

.class {
  font-family: '微软雅黑';
}

.class {
  content: '\\\\e901';
}

.class {
  content: \\"\\\\F10C\\"
}

.class {
  content: \\"\\\\f10C\\"
}

.class {
  content: \\"\\\\F10C \\\\F10D\\"
}

:root {
  --foo: 1px;
  --bar: 2px;
}

:root {
  --title-align: center;
  --sr-only: {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
    clip-path: inset(50%);
    border: 0;
  };
}
",
    "",
  ],
]
`;

exports[`loader basic: module 1`] = `
"// CSS runtime
module.exports = exports = require(\\"../../src/runtime/api.js\\")(false);

// CSS imports
var escape = require(\\"../../src/runtime/escape.js\\");
var ___CSS_LOADER_URL___0___ = escape(require(\\"./url/img.png\\"));
exports.i(require(\\"-!../../src/index.js??ref--4!./imported.css\\"), \\"\\");

// CSS module
exports.push([module.id, \\"@charset \\\\\\"UTF-8\\\\\\";\\\\n\\\\n.class {\\\\n  color: red;\\\\n  background: url(\\" + ___CSS_LOADER_URL___0___ + \\");\\\\n}\\\\n\\\\n.class-duplicate-url {\\\\n  background: url(\\" + ___CSS_LOADER_URL___0___ + \\");\\\\n}\\\\n\\\\n.u-m\\\\\\\\+ {\\\\n  a: b c d;\\\\n}\\\\n\\\\n.grid.\\\\\\\\-top {\\\\n  a: b c d;\\\\n}\\\\n\\\\n.u-m\\\\\\\\00002b {\\\\n  a: b c d;\\\\n}\\\\n\\\\n.class {\\\\n  content: '\\\\\\"\\\\\\\\\\\\\\\\f10c\\\\\\"';\\\\n}\\\\n\\\\n.class {\\\\n  font-family: '微软雅黑';\\\\n}\\\\n\\\\n.class {\\\\n  content: '\\\\\\\\e901';\\\\n}\\\\n\\\\n.class {\\\\n  content: \\\\\\"\\\\\\\\F10C\\\\\\"\\\\n}\\\\n\\\\n.class {\\\\n  content: \\\\\\"\\\\\\\\f10C\\\\\\"\\\\n}\\\\n\\\\n.class {\\\\n  content: \\\\\\"\\\\\\\\F10C \\\\\\\\F10D\\\\\\"\\\\n}\\\\n\\\\n:root {\\\\n  --foo: 1px;\\\\n  --bar: 2px;\\\\n}\\\\n\\\\n:root {\\\\n  --title-align: center;\\\\n  --sr-only: {\\\\n    position: absolute;\\\\n    width: 1px;\\\\n    height: 1px;\\\\n    padding: 0;\\\\n    overflow: hidden;\\\\n    clip: rect(0,0,0,0);\\\\n    white-space: nowrap;\\\\n    clip-path: inset(50%);\\\\n    border: 0;\\\\n  };\\\\n}\\\\n\\", \\"\\"]);

"
`;

exports[`loader basic: runtime 1`] = `
"/* eslint-disable */

// CSS Loader (Runtime)
module.exports = function(useSourceMap) {
  var list = [];

  // Return the list of modules as css string
  list.toString = function toString() {
    return this.map(function(item) {
      var content = cssWithMappingToString(item, useSourceMap);

      if (item[2]) {
        return '@media ' + item[2] + '{' + content + '}';
      }

      return content;
    }).join('');
  };

  // Import a list of modules into the list
  list.i = function(modules, mediaQuery) {
    if (typeof modules === 'string') {
      modules = [[null, modules, '']];
    }

    const isImported = {};

    for (var i = 0; i < this.length; i++) {
      const id = this[i][0];

      if (typeof id === 'number') {
        isImported[id] = true;
      }
    }

    for (var i = 0; i < modules.length; i++) {
      const item = modules[i];

      // Skip already imported module.
      // This implementation is not 100% perfect for weird media query combinations
      // when a module is imported multiple times with different media queries.
      // I hope this will never occur (Hey this way we have smaller bundles).
      if (typeof item[0] !== 'number' || !isImported[item[0]]) {
        if (mediaQuery && !item[2]) {
          item[2] = mediaQuery;
        } else if (mediaQuery) {
          item[2] = '(' + item[2] + ') and (' + mediaQuery + ')';
        }

        list.push(item);
      }
    }
  };

  return list;
};

function cssWithMappingToString(item, useSourceMap) {
  var content = item[1] || '';
  var sourceMap = item[3];

  if (!sourceMap) {
    return content;
  }

  if (useSourceMap && typeof btoa === 'function') {
    var sourceMapping = toComment(sourceMap);
    var sourceURLs = sourceMap.sources.map(function(source) {
      return '/*# sourceURL=' + sourceMap.sourceRoot + source + ' */';
    });

    return [content]
      .concat(sourceURLs)
      .concat([sourceMapping])
      .join('\\\\n');
  }

  return [content].join('\\\\n');
}

// Adapted from convert-source-map (MIT)
function toComment(sourceMap) {
  var base64 = btoa(unescape(encodeURIComponent(JSON.stringify(sourceMap))));
  var data =
    'sourceMappingURL=data:application/json;charset=utf-8;base64,' + base64;

  return '/*# ' + data + ' */';
}
"
`;

exports[`loader basic: warnings 1`] = `Array []`;

exports[`loader empty options: errors 1`] = `Array []`;

exports[`loader empty options: module (evaluated) 1`] = `
Array [
  Array [
    1,
    "",
    "",
  ],
]
`;

exports[`loader empty options: module 1`] = `
"// CSS runtime
module.exports = exports = require(\\"../../src/runtime/api.js\\")(false);

// CSS module
exports.push([module.id, \\"\\", \\"\\"]);

"
`;

exports[`loader empty options: warnings 1`] = `Array []`;

exports[`loader error when no loader for url assets: errors 1`] = `
Array [
  [ModuleParseError: Module parse failed: Unexpected character '�' (1:0)
You may need an appropriate loader to handle this file type.
(Source code omitted for this binary file)],
]
`;

exports[`loader error when no loader for url assets: warnings 1`] = `Array []`;

exports[`loader message api: errors 1`] = `
Array [
  [ModuleError: Module Error (from \`replaced original path\`):
Error],
]
`;

exports[`loader message api: module (evaluated) 1`] = `
Array [
  Array [
    3,
    ".foo {
  color: red;
}
",
    "",
  ],
  Array [
    1,
    "@charset \\"UTF-8\\";

.class {
  color: red;
  background: url(/webpack/public/path/5b1f36bc41ab31f5b801d48ba1d65781.png);
}

.other-class {
  color: blue;
}

.other-other-class {
  background: url(\\"/webpack/public/path/5b1f36bc41ab31f5b801d48ba1d65781.png\\");
}
",
    "",
  ],
]
`;

exports[`loader message api: module 1`] = `
"// CSS runtime
module.exports = exports = require(\\"../../../src/runtime/api.js\\")(false);

// CSS imports
var escape = require(\\"../../../src/runtime/escape.js\\");
var ___CSS_LOADER_URL___0___ = escape(require(\\"./img.png\\"));
exports.i(require(\\"-!../../../src/index.js??ref--4-0!../../../node_modules/postcss-loader/src/index.js??ref--4-1!./imported.css\\"), \\"\\");

var otherImage = require(\\"./other-img.png\\");
// CSS module
exports.push([module.id, \\"@charset \\\\\\"UTF-8\\\\\\";\\\\n\\\\n.class {\\\\n  color: red;\\\\n  background: url(\\" + ___CSS_LOADER_URL___0___ + \\");\\\\n}\\\\n\\\\n.other-class {\\\\n  color: blue;\\\\n}\\\\n\\\\n.other-other-class {\\\\n  background: url(\\\\\\"\\" + otherImage + \\"\\\\\\");\\\\n}\\\\n\\", \\"\\"]);

// CSS exports
exports.locals = { foo: \\"bar\\", bar: \\"foo\\" };

"
`;

exports[`loader message api: warnings 1`] = `Array []`;

exports[`loader using together with "postcss-loader" (reuse ast): errors 1`] = `Array []`;

exports[`loader using together with "postcss-loader" (reuse ast): module (evaluated) 1`] = `
Array [
  Array [
    1,
    ":root {
  --fontSize: 1rem;
  --mainColor: rgba(18,52,86,0.47059);
  --secondaryColor: rgba(102, 51, 153, 0.9);
}

html {
  overflow-x: hidden;
  overflow-y: auto;
  overflow: hidden auto;
}

@media (max-width: 50rem) {
  body {
    color: rgba(18,52,86,0.47059);
    color: var(--mainColor);
    font-family: system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, sans-serif;
    font-size: 1rem;
    font-size: var(--fontSize);
    line-height: calc(1rem * 1.5);
    line-height: calc(var(--fontSize) * 1.5);
    word-wrap: break-word;
    padding-left: calc(1rem / 2 + 1px);
    padding-right: calc(1rem / 2 + 1px);
    padding-left: calc(var(--fontSize) / 2 + 1px);
    padding-right: calc(var(--fontSize) / 2 + 1px);
  }
}

h1,h2,h3,h4,h5,h6 {
  margin-top: 0;
  margin-bottom: 0;
}

main.hero, .hero.main {
  background-image: url/img.png;
}

@media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {

main.hero, .hero.main {
  background-image: url/img2x.png;
}
}

main.hero, .hero.main {
  background-image: -webkit-image-set(url(/webpack/public/path/5b1f36bc41ab31f5b801d48ba1d65781.png) 1x, url(/webpack/public/path/5b1f36bc41ab31f5b801d48ba1d65781.png) 2x);
  background-image: image-set(\\"url/img.png\\" 1x, \\"url/img2x.png\\" 2x);
}

a {
  color: #639
}

a:hover {
   color: color-mod(rgba(102, 51, 153, 0.9) b(15%) a(75%));
   color: color-mod(var(--secondaryColor) b(15%) a(75%));
 }
",
    "",
  ],
]
`;

exports[`loader using together with "postcss-loader" (reuse ast): module 1`] = `
"// CSS runtime
module.exports = exports = require(\\"../../src/runtime/api.js\\")(false);

// CSS imports
var escape = require(\\"../../src/runtime/escape.js\\");
var ___CSS_LOADER_URL___0___ = escape(require(\\"./url/img.png\\"));
var ___CSS_LOADER_URL___1___ = escape(require(\\"./url/img2x.png\\"));

// CSS module
exports.push([module.id, \\":root {\\\\n  --fontSize: 1rem;\\\\n  --mainColor: rgba(18,52,86,0.47059);\\\\n  --secondaryColor: rgba(102, 51, 153, 0.9);\\\\n}\\\\n\\\\nhtml {\\\\n  overflow-x: hidden;\\\\n  overflow-y: auto;\\\\n  overflow: hidden auto;\\\\n}\\\\n\\\\n@media (max-width: 50rem) {\\\\n  body {\\\\n    color: rgba(18,52,86,0.47059);\\\\n    color: var(--mainColor);\\\\n    font-family: system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, sans-serif;\\\\n    font-size: 1rem;\\\\n    font-size: var(--fontSize);\\\\n    line-height: calc(1rem * 1.5);\\\\n    line-height: calc(var(--fontSize) * 1.5);\\\\n    word-wrap: break-word;\\\\n    padding-left: calc(1rem / 2 + 1px);\\\\n    padding-right: calc(1rem / 2 + 1px);\\\\n    padding-left: calc(var(--fontSize) / 2 + 1px);\\\\n    padding-right: calc(var(--fontSize) / 2 + 1px);\\\\n  }\\\\n}\\\\n\\\\nh1,h2,h3,h4,h5,h6 {\\\\n  margin-top: 0;\\\\n  margin-bottom: 0;\\\\n}\\\\n\\\\nmain.hero, .hero.main {\\\\n  background-image: url/img.png;\\\\n}\\\\n\\\\n@media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {\\\\n\\\\nmain.hero, .hero.main {\\\\n  background-image: url/img2x.png;\\\\n}\\\\n}\\\\n\\\\nmain.hero, .hero.main {\\\\n  background-image: -webkit-image-set(url(\\" + ___CSS_LOADER_URL___0___ + \\") 1x, url(\\" + ___CSS_LOADER_URL___1___ + \\") 2x);\\\\n  background-image: image-set(\\\\\\"url/img.png\\\\\\" 1x, \\\\\\"url/img2x.png\\\\\\" 2x);\\\\n}\\\\n\\\\na {\\\\n  color: #639\\\\n}\\\\n\\\\na:hover {\\\\n   color: color-mod(rgba(102, 51, 153, 0.9) b(15%) a(75%));\\\\n   color: color-mod(var(--secondaryColor) b(15%) a(75%));\\\\n }\\\\n\\", \\"\\"]);

"
`;

exports[`loader using together with "postcss-loader" (reuse ast): warnings 1`] = `Array []`;

exports[`loader using together with "sass-loader": errors 1`] = `Array []`;

exports[`loader using together with "sass-loader": module (evaluated) 1`] = `
Array [
  Array [
    3,
    ".other-class {
  color: blue;
}
",
    "",
  ],
  Array [
    1,
    "body {
  color: white; }

body {
  font: 100% Helvetica, sans-serif;
  color: #333; }

nav ul {
  margin: 0;
  padding: 0;
  list-style: none; }

nav li {
  display: inline-block; }

nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none; }

.box {
  -webkit-transform: rotate(30deg);
  -ms-transform: rotate(30deg);
  transform: rotate(30deg); }

.background {
  background: url(/webpack/public/path/5b1f36bc41ab31f5b801d48ba1d65781.png); }
",
    "",
  ],
]
`;

exports[`loader using together with "sass-loader": module 1`] = `
"// CSS runtime
module.exports = exports = require(\\"../../../src/runtime/api.js\\")(false);

// CSS imports
var escape = require(\\"../../../src/runtime/escape.js\\");
var ___CSS_LOADER_URL___0___ = escape(require(\\"./img.png\\"));
exports.i(require(\\"-!../../../src/index.js??ref--4-0!./style.css\\"), \\"\\");

// CSS module
exports.push([module.id, \\"body {\\\\n  color: white; }\\\\n\\\\nbody {\\\\n  font: 100% Helvetica, sans-serif;\\\\n  color: #333; }\\\\n\\\\nnav ul {\\\\n  margin: 0;\\\\n  padding: 0;\\\\n  list-style: none; }\\\\n\\\\nnav li {\\\\n  display: inline-block; }\\\\n\\\\nnav a {\\\\n  display: block;\\\\n  padding: 6px 12px;\\\\n  text-decoration: none; }\\\\n\\\\n.box {\\\\n  -webkit-transform: rotate(30deg);\\\\n  -ms-transform: rotate(30deg);\\\\n  transform: rotate(30deg); }\\\\n\\\\n.background {\\\\n  background: url(\\" + ___CSS_LOADER_URL___0___ + \\"); }\\\\n\\", \\"\\"]);

"
`;

exports[`loader using together with "sass-loader": warnings 1`] = `Array []`;
